--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -794,37 +794,7 @@ input, button, select, optgroup, textarea {
   width: 19.06rem;
 }
 .z-form-header .z-form-button-list .z-header-dropdown {
-  width: 1.25rem;
-  padding: 0;
-  /*&.hover {
-    > .dropdown-content {
-      visibility: visible;
-      display: block;
-    }
-    &:last-child > .dropdown-content {
-      right: $layout-header-padding; // 12px
-    }
-  }*/
-}
-.z-form-header .z-form-button-list .z-header-dropdown .z-icon {
-  margin: -0.1875rem;
-}
-.z-form-header .z-form-button-list .dropdown-content {
-  visibility: hidden;
-  background-color: #FFFFFF;
-  color: #33ADFF;
-  text-align: center;
-  font-size: 1.125rem;
-  margin: 0.6875rem 0 0 0;
-  position: absolute;
-  z-index: 500;
-  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.5);
-}
-.z-form-header .z-form-button-list .dropdown-item {
-  padding: 0.6875rem 0.875rem;
-}
-.z-form-header .z-form-button-list .dropdown-item:hover {
-  background-color: rgba(235, 235, 235, 0.3);
+  position: relative;
 }
 .z-form-component-palette {
   position: fixed;
@@ -2910,6 +2880,9 @@ label {
   border-bottom-right-radius: 0;
 }
 
+.z-header-button.z-button-icon .z-icon {
+  pointer-events: none;
+}
 .z-header-button.z-button-icon .z-icon.i-save {
   width: 1.5rem;
   height: 1.5rem;
@@ -2960,15 +2933,75 @@ label {
   -webkit-mask-position: center;
   mask-position: center;
 }
-.z-header-button.z-button-icon .z-icon.i-dropdown {
-  width: 1.5rem;
-  height: 1.5rem;
-  -webkit-mask-image: url("../media/icons/formDesigner/topmenu/icon_dropdown.svg");
-  mask-image: url("../media/icons/formDesigner/topmenu/icon_dropdown.svg");
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  mask-position: center;
+.z-header-button.z-button-icon .z-icon.i-arrow-right {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.z-header-button-dropdown {
+  width: 1.25rem;
+  padding: 0.25rem 0;
+}
+.z-header-button-dropdown .z-icon {
+  margin-left: -0.1875rem;
+  pointer-events: none;
+}
+.z-header-button-dropdown + .z-dropdown-content {
+  min-width: 9.625rem;
+  visibility: hidden;
+  position: absolute;
+  right: 0;
+  padding: 0 0.25rem 0.25rem 0.25rem;
+  margin: 0.6875rem 0 0 0;
+  z-index: 500;
+  background-color: #FFFFFF;
+  border: 0.0625rem solid #CFD5D9;
+  -webkit-box-shadow: 0 2px 12px 0 #CFD5D9;
+  -moz-box-shadow: 0 2px 12px 0 #CFD5D9;
+  box-shadow: 0 2px 12px 0 #CFD5D9;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item {
+  padding: 0.25rem 0 0 0;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown {
+  width: 100%;
+  font-weight: 500;
+  color: #222529;
+  background-color: #FFFFFF;
+  border-color: #FFFFFF;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown:focus {
+  outline: 0;
+  color: #222529;
+  background-color: #FFFFFF;
+  border-color: #2578CE;
+  box-shadow: 0 0 0.125rem #2578CE;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown:hover {
+  outline: 0;
+  color: #222529;
+  background-color: #F1F9FC;
+  border-color: #F1F9FC;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown:enabled:active, .z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown:enabled.active {
+  color: #1959AC;
+  background-color: #E3F5FC;
+  border-color: #E3F5FC;
+  z-index: 25;
+}
+.z-header-button-dropdown.active .z-icon.i-arrow-right {
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+.z-header-button-dropdown.active + .z-dropdown-content {
+  visibility: visible;
+  display: block;
 }
 
 .z-button-switch-group .z-button-switch .z-text,
