#10903 디자인 - 프로세스 디자이너 편집 화면 상단 (nav)

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -771,26 +771,30 @@ input, button, select, optgroup, textarea {
   left: 0;
   display: flex;
   align-items: center;
-  height: 3.125rem;
+  height: 2.875rem;
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   font-size: 1.125rem;
   font-weight: 500;
   color: #FFFFFF;
   background-color: #339AF0;
-  padding: 0 1.25rem;
   z-index: 100;
 }
-.z-process-header .name {
-  font-size: 1.125rem;
-  padding: 0 0.9375rem;
+.z-process-header .z-logo {
+  width: 12.5rem;
+  padding: 0 0.75rem;
 }
-.z-process-header .separator {
-  width: 0.063rem;
-  height: 1.25rem;
-  background-color: #4DB7FF;
+.z-process-header .z-process-name {
+  font-size: 1.125rem;
+}
+.z-process-header .z-process-button-list {
+  width: 19.06rem;
+}
+.z-process-header .z-process-button-list .z-header-dropdown {
+  position: relative;
 }
 .z-process-element-palette {
   position: fixed;
-  top: 3.125rem;
+  top: 2.875rem;
   bottom: 0;
   left: 0;
   width: 6.25rem;
@@ -803,7 +807,7 @@ input, button, select, optgroup, textarea {
 }
 .z-process-main {
   position: fixed;
-  top: 3.125rem;
+  top: 2.875rem;
   right: 18.75rem;
   bottom: 0;
   left: 0;
@@ -940,7 +944,7 @@ input, button, select, optgroup, textarea {
 }
 .z-process-properties-header {
   position: fixed;
-  top: 3.125rem;
+  top: 2.875rem;
   right: 0;
   width: 18.75rem;
   height: 2.5rem;
@@ -952,7 +956,7 @@ input, button, select, optgroup, textarea {
 }
 .z-process-properties {
   position: fixed;
-  top: calc(3.125rem + 2.5rem);
+  top: calc(2.875rem + 2.5rem);
   right: 0;
   bottom: 0;
   width: 18.75rem;
@@ -2800,8 +2804,8 @@ svg path.connector.hidden {
   border-bottom-right-radius: 0;
 }
 
-.z-header-button {
-  padding: 0.5625rem 0.625rem;
+.z-header-button.z-button-icon .z-icon {
+  pointer-events: none;
 }
 .z-header-button.z-button-icon .z-icon.i-save {
   width: 1.5rem;
@@ -2862,6 +2866,76 @@ svg path.connector.hidden {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
+}
+.z-header-button.z-button-icon .z-icon.i-arrow-right {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.z-header-button-dropdown {
+  width: 1.25rem;
+  padding: 0.25rem 0;
+}
+.z-header-button-dropdown .z-icon {
+  margin-left: -0.1875rem;
+  pointer-events: none;
+}
+.z-header-button-dropdown + .z-dropdown-content {
+  min-width: 9.625rem;
+  visibility: hidden;
+  position: absolute;
+  right: 0;
+  padding: 0 0.25rem 0.25rem 0.25rem;
+  margin: 0.6875rem 0 0 0;
+  z-index: 250;
+  background-color: #FFFFFF;
+  border: 0.0625rem solid #CFD5D9;
+  -webkit-box-shadow: 0 2px 12px 0 #CFD5D9;
+  -moz-box-shadow: 0 2px 12px 0 #CFD5D9;
+  box-shadow: 0 2px 12px 0 #CFD5D9;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item {
+  padding: 0.25rem 0 0 0;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown {
+  width: 100%;
+  font-weight: 500;
+  color: #222529;
+  background-color: #FFFFFF;
+  border-color: #FFFFFF;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown:focus {
+  outline: 0;
+  color: #222529;
+  background-color: #FFFFFF;
+  border-color: #2578CE;
+  box-shadow: 0 0 0.125rem #2578CE;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown:hover {
+  outline: 0;
+  color: #222529;
+  background-color: #F1F9FC;
+  border-color: #F1F9FC;
+}
+.z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown:enabled:active, .z-header-button-dropdown + .z-dropdown-content .z-dropdown-item .z-button-dropdown:enabled.active {
+  color: #1959AC;
+  background-color: #E3F5FC;
+  border-color: #E3F5FC;
+  z-index: 25;
+}
+.z-header-button-dropdown.active .z-icon.i-arrow-right {
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+.z-header-button-dropdown.active + .z-dropdown-content {
+  visibility: visible;
+  display: block;
 }
 
 .z-element-icon {
@@ -3788,26 +3862,46 @@ svg path.connector.hidden {
   background: #0098FF;
 }
 
-.header-tooltip .tooltip-contents {
+.z-header-tooltip {
+  position: relative;
+}
+.z-header-tooltip .z-header-tooltip-contents {
   position: absolute;
-  min-width: 3.75rem;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
   visibility: hidden;
-  background-color: #33ADFF;
-  color: #FFFFFF;
+  background-color: #FFFFFF;
   text-align: center;
-  font-size: 1.125rem;
-  border-radius: 0.1875rem;
-  -webkit-border-radius: 0.1875rem;
-  -moz-border-radius: 0.1875rem;
-  padding: 0.6875rem 0.875rem;
-  margin: 1.3125rem 0 0 0;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  border: 0.0625rem solid #CFD5D9;
+  -webkit-box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  -moz-box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  padding: 7px;
+  margin: 16px 0 0 0;
   z-index: 500;
 }
-.header-tooltip .tooltip-contents span {
-  color: #FFFFFF;
+.z-header-tooltip .z-header-tooltip-contents.last {
+  left: 0;
+  -webkit-transform: translate(-70%, 0);
+  -moz-transform: translate(-70%, 0);
+  -o-transform: translate(-70%, 0);
+  -ms-transform: translate(-70%, 0);
+  transform: translate(-70%, 0);
+}
+.z-header-tooltip .z-header-tooltip-contents .z-header-tooltip-text {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
+  font-size: 0.875rem;
+  color: #222529;
   font-weight: 500;
 }
-.header-tooltip:hover .tooltip-contents {
+.z-header-tooltip:hover .z-header-tooltip-contents {
   visibility: visible;
   -webkit-animation-delay: 0s;
   -webkit-animation-duration: 0.3s;
