--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1219,12 +1219,13 @@ input, button, select, optgroup, textarea {
 }
 
 .z-save-info {
-  height: 2.188rem;
+  min-height: 1.5625rem;
+  line-height: 1.5;
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 700;
   color: #8B9094;
-  margin-top: 1.5625rem;
+  margin: 1.5625rem 0;
 }
 
 /* _elements.scss
@@ -2957,7 +2958,7 @@ label {
   right: 0;
   padding: 0 0.25rem 0.25rem 0.25rem;
   margin: 0.6875rem 0 0 0;
-  z-index: 500;
+  z-index: 250;
   background-color: #FFFFFF;
   border: 0.0625rem solid #CFD5D9;
   -webkit-box-shadow: 0 2px 12px 0 #CFD5D9;
@@ -5113,79 +5114,46 @@ body.modal-active {
   background: #0098FF;
 }
 
-.header-tooltip .tooltip-contents {
+.z-header-tooltip {
+  position: relative;
+}
+.z-header-tooltip .z-header-tooltip-contents {
   position: absolute;
-  min-width: 3.75rem;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
   visibility: hidden;
-  background-color: #33ADFF;
-  color: #FFFFFF;
+  background-color: #FFFFFF;
   text-align: center;
-  font-size: 1.125rem;
-  border-radius: 0.1875rem;
-  -webkit-border-radius: 0.1875rem;
-  -moz-border-radius: 0.1875rem;
-  padding: 0.6875rem 0.875rem;
-  margin: 1.3125rem 0 0 0;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  border: 0.0625rem solid #CFD5D9;
+  -webkit-box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  -moz-box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  padding: 7px;
+  margin: 16px 0 0 0;
   z-index: 500;
 }
-.header-tooltip .tooltip-contents span {
-  color: #FFFFFF;
+.z-header-tooltip .z-header-tooltip-contents.last {
+  left: 0;
+  -webkit-transform: translate(-70%, 0);
+  -moz-transform: translate(-70%, 0);
+  -o-transform: translate(-70%, 0);
+  -ms-transform: translate(-70%, 0);
+  transform: translate(-70%, 0);
+}
+.z-header-tooltip .z-header-tooltip-contents .z-header-tooltip-text {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
+  font-size: 0.875rem;
+  color: #222529;
   font-weight: 500;
 }
-.header-tooltip:hover .tooltip-contents {
-  visibility: visible;
-  -webkit-animation-delay: 0s;
-  -webkit-animation-duration: 0.3s;
-  -webkit-animation-name: fadeIn;
-  -webkit-animation-timing-function: ease-out;
-  -webkit-animation-iteration-count: 1;
-  -webkit-animation-direction: normal;
-  -moz-animation-delay: 0s;
-  -moz-animation-duration: 0.3s;
-  -moz-animation-name: fadeIn;
-  -moz-animation-timing-function: ease-out;
-  -moz-animation-iteration-count: 1;
-  -moz-animation-direction: normal;
-  -o-animation-delay: 0s;
-  -o-animation-duration: 0.3s;
-  -o-animation-name: fadeIn;
-  -o-animation-timing-function: ease-out;
-  -o-animation-iteration-count: 1;
-  -o-animation-direction: normal;
-  -ms-animation-delay: 0s;
-  -ms-animation-duration: 0.3s;
-  -ms-animation-name: fadeIn;
-  -ms-animation-timing-function: ease-out;
-  -ms-animation-iteration-count: 1;
-  -ms-animation-direction: normal;
-  animation-delay: 0s;
-  animation-duration: 0.3s;
-  animation-name: fadeIn;
-  animation-timing-function: ease-out;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-}
-
-.header-tooltip .tooltip-contents-reverse {
-  min-width: 3.75rem;
-  visibility: hidden;
-  background-color: #33ADFF;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 1.125rem;
-  border-radius: 0.125rem;
-  -webkit-border-radius: 0.125rem;
-  -moz-border-radius: 0.125rem;
-  padding: 0.6875rem 0.875rem;
-  margin: 1.3125rem 0 0 0;
-  position: absolute;
-  z-index: 500;
-}
-.header-tooltip .tooltip-contents-reverse span {
-  color: #FFFFFF;
-  font-weight: 500;
-}
-.header-tooltip:hover .tooltip-contents {
+.z-header-tooltip:hover .z-header-tooltip-contents {
   visibility: visible;
   -webkit-animation-delay: 0s;
   -webkit-animation-duration: 0.3s;
